Cleanup: Added PHPdoc comments and fixed typing error
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/deprecated/trunk@23326 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,3 +2,4 @@
 
 	* Initial version
 	* Added feature: Wrapper for t3lib_div::makeInstance/t3lib_div::makeInstanceClassName()
+	* Cleanup: Added PHPdoc comments and fixed typing error
