Added feature: Wrapper to fetch permissions on file operations of backend users
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/deprecated/trunk@23362 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-08-13  Oliver Hader  <oliver@typo3.org>
+
+	* Added feature: Wrapper to fetch permissions on file operations of backend users
+
 2009-08-12  Oliver Hader  <oliver@typo3.org>
 
 	* Initial version
